# smartinput_ng

./: install.sh
smartinput_ng_daemon/: Makefile  PKGBUILD  main.py  pyproject.toml  run.py  serialrgbtest.py  smartinput.example.yml  smartinput.yml  smartinput_ng_daemon.service  todo.md
smartinput_ng_daemon/arch/: PKGBUILD
smartinput_ng_daemon/rgb/: constants.py  helpers.py  rainbow.py  static.py
smartinput_ng_daemon/smartinput/: __init__.py  handle.py  helpers.py  types.py
smartinput_ng_daemon/smartinput/handlers/: exec.py
smartinput_ng_daemon/smartinput/rgb/: switching.py
smartinput_ng_daemon/smartinput/rgb/effects/: static.py
smartinput_ng_daemon/smartinput/settings/: __init__.py
smartinput_ng_daemon/smartinput/tests/: test_exec_handler.py
smartinput_ng_firmware/: platformio.ini
smartinput_ng_firmware/src/: led.hpp  main.cpp
smartinput_ng_ui/: install.sh  package.json  smartinput_ng_ui.desktop  tailwind.config.js
smartinput_ng_ui/src/: App.vue  Home.vue  types.ts
smartinput_ng_ui/src-tauri/: Cargo.toml  tauri.conf.json
smartinput_ng_ui/src-tauri/icons/: icon.icns
